docker - docker빌드 오류로 인한 명령어 수정

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "dev": "yarn run generate:nexus && npx ts-node-dev --transpile-only document-approval/index.ts",
-    "build": "yarn run generate:nexus && yarn run generate:prsima && npx tsc",
+    "build": "yarn run generate:prsima && yarn run generate:nexus && npx tsc",
     "generate:nexus": "cross-env NEXUS_SHOULD_EXIT_AFTER_REFLECTION=true npx ts-node --transpile-only ./document-approval/resolver/index.ts",
     "generate:prisma": "npx prisma generate",
     "start": "cross-env NODE_ENV=production node build/document-approval",
